--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
+certifi==2019.9.11
+chardet==3.0.4
+configparser==4.0.2
 dj-database-url==0.5.0
-Django==2.2.4
+Django==2.2.5
+django-heroku==0.3.1
+djangorestframework==3.10.3
 gunicorn==19.9.0
-psycopg2-binary==2.8.2
-pytz==2019.1
+idna==2.8
+mysqlclient==1.4.4
+psycopg2==2.8.3
+psycopg2-binary==2.8.3
+pypi==2.1
+pytz==2019.2
+requests==2.22.0
 sqlparse==0.3.0
-whitenoise==4.1.2
+urllib3==1.25.6
+whitenoise==4.1.4
